# libgpa

./: CMakeLists.txt  README.md
cmake/: gpa-config.cmake.in
examples/: example.c
fpc/: gpa.pas  gpa_wrapper.pas
gpa_manager/: gpa.pas  gpa_manager.lpi  gpa_manager.lpr  gpa_manager.lps  gpa_wrapper.pas  main_form.lfm  main_form.pas  settings.ini  settings_form.lfm  settings_form.pas
gpa_manager/test_data/: CMakeLists.txt  CMakeLists1.gpa  enc_test.txt  test_archive.gpa  test_bz2_archive.gpa  test_encrypted.gpa  test_lz4_archive.gpa  test_lzma_archive.gpa  test_zstd_archive.gpa
gpa_tool/: gpa_tool.c
src/: gpa.c  gpa.h
